package model;

public enum TradeType
{ BUY, SELL }
